<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netodologia.myapplication.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/app_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="100"
        android:title="@string/app_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_calendar"
        android:orderInCategory="100"
        android:title="@string/app_calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_gallery"
        android:orderInCategory="100"
        android:title="@string/app_gallery"
        app:showAsAction="never" />
</menu>