<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/imageView_width"
        android:layout_height="@dimen/imageView_height"
        android:layout_marginStart="@dimen/imageView_marginStart"
        android:layout_marginBottom="@dimen/imageView_marginBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/s1200" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/back_marginTop"
        android:text="@string/app_back"
        app:layout_constraintStart_toStartOf="@+id/link"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/next_marginTop"
        android:layout_marginEnd="@dimen/next_marginEnd"
        android:text="@string/app_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/link"
        android:layout_width="@dimen/link_width"
        android:layout_height="@dimen/link_height"
        android:layout_marginStart="@dimen/link_marginStart"
        android:layout_marginTop="@dimen/link_marginTop"
        android:layout_marginEnd="@dimen/link_marginEnd"
        android:text="@string/app_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next" />
</androidx.constraintlayout.widget.ConstraintLayout>